# Multi-Agent-Coder

./: .env.example  .gitignore  Dockerfile.sandbox  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_LIVE_VALIDATION.md  PHASE_5_8_COMPLETION.md  README.md  _test_coder_pipeline.py  app.py  docker-compose.yml  integration_checklist_sota.py  log_dump.txt  out.txt  out2.txt  output.txt  pyproject.toml  resolution_report.json  run_logs.txt  test_extract_simple.py  test_extraction.py  test_fixes.py  test_graph.py  test_hint_extraction.py  test_hints_quick.py  test_integration.py  test_phase1_improvements.py  test_phase1_simple.py  test_researcher_perf.py  test_tools_unit.py  validation_tpd_planner_coder.py
.github/workflows/: ci.yml
issue_resolver/: __init__.py  config.py  graph.py  llm_utils.py  main.py  runtime_context.py  state.py
issue_resolver/nodes/: __init__.py  coder.py  planner.py  researcher.py  reviewer.py  setup.py  supervisor.py  test_generator.py  test_validator.py
issue_resolver/tools/: __init__.py  repo_tools.py  sandbox_tools.py
issue_resolver/utils/: github_utils.py  issue_utils.py  logger.py  ripgrep_search.py  token_bucket.py
sandbox_workspace/: README.md  fix.patch
sandbox_workspace/sandbox_workspace/: fix.patch
sandbox_workspace/src/: main.py  utils.py  utils.py.orig  utils.py.rej
tests/: __init__.py  conftest.py  test_basic.py  test_coder_parser.py  test_repo_tools_filtering.py  test_sandbox_strategy.py  test_setup_node.py  test_supervisor_guards.py
