[project]
name = "multi-agent-issue-resolver"
version = "0.2.0"
description = "Multi-Agent GitHub Issue Resolution System using LangGraph and Ollama"
requires-python = ">=3.12"
dependencies = [
    "langgraph",
    "langchain-groq",
    "psycopg[binary]",
    "fastapi",
    "uvicorn",
    "streamlit",
    "PyGithub",
    "GitPython",
    "python-dotenv",
    "docker",
    "pathspec",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]